# text-extraction-backend

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: test.py
app/clovaai-craft/clovaai-craft-master/: test.py
app/clovaai-craft/clovaai-craft-master/nets/: nn.py
app/clovaai-craft/clovaai-craft-master/utils/: config.yaml
